--- a/index.html
+++ b/index.html
@@ -2,52 +2,95 @@
 <html>
 
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="css/jquery.mobile.min.css" />
-	<link rel="stylesheet" href="css/style.css" />
-
-	<script type="text/javascript" src="cordova.js"></script>
-	<script type="text/javascript" src="js/jquery.min.js"></script>
-	<script type="text/javascript" src="js/jquery.mobile.min.js"></script>
-	<script type="text/javascript" src="js/script.js"></script>
+	<meta charset="utf-8" />
+	<meta name="format-detection" content="telephone=no" />
+	<meta name="msapplication-tap-highlight" content="no" />
+	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+	<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+	<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 </head>
 
 <body>
 
 	<!-- Start of first page -->
-	<div data-role="page" id="foo">
-
+	<div data-role="page" id="first-page">
 		<div data-role="header">
-			<h1>Foo</h1>
-		</div><!-- /header -->
+			<h1>First page header</h1>
+		</div>
+		<!-- /header -->
 
 		<div role="main" class="ui-content">
-			<p>I'm first in the source order so I'm shown as the page.</p>
-			<p>View internal page called <a href="#bar">bar</a></p>
-		</div><!-- /content -->
+			<p>A header can be added to a page by adding a div with a data-role="header".</p>
+			<p>Notice how the header scrolls with your content. You can change this by adding the data-position="fixed" to your
+				header.</p>
+			<p>Similarly, a footer can be created by adding a div with data-role="footer". In this page it already has the
+				data-position="fixed" so it does not scroll out of view.</p>
+			<p>View internal page called <a href="#second-page">Second</a></p>
+			<p></p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras consequat non ipsum in convallis. Nulla vel purus
+				quis diam malesuada tristique non in augue. Vestibulum et turpis et mi laoreet gravida. In dui erat, egestas vel
+				sapien tincidunt, gravida
+				luctus sem. Pellentesque libero neque, tincidunt at sapien nec, luctus rhoncus neque. Nulla aliquam commodo
+				sollicitudin. Maecenas dapibus sem tortor, quis tempor nulla commodo ut. Quisque et mattis tortor. Cras mollis
+				interdum lacus, venenatis cursus
+				enim finibus at. Maecenas felis diam, vulputate id consectetur vel, sagittis sit amet orci. Fusce a purus eget diam
+				mollis auctor. Duis auctor posuere tincidunt. Donec facilisis tortor in turpis interdum tincidunt.
+			</p>
+		</div>
+		<!-- /content -->
 
-		<div data-role="footer">
+		<div data-role="footer" data-position="fixed">
 			<h4>Page Footer</h4>
-		</div><!-- /footer -->
-	</div><!-- /page -->
+		</div>
+		<!-- /footer -->
+	</div>
+	<!-- /page -->
 
 	<!-- Start of second page -->
-	<div data-role="page" id="bar">
-
+	<div data-role="page" id="second-page">
 		<div data-role="header">
-			<h1>Bar</h1>
-		</div><!-- /header -->
+			<h1>Second page header</h1>
+		</div>
+		<!-- /header -->
 
 		<div role="main" class="ui-content">
 			<p>I'm the second in the source order so I'm hidden when the page loads. I'm just shown if a link that references my
 				id is beeing clicked.</p>
-			<p><a href="#foo">Back to foo</a></p>
-		</div><!-- /content -->
+			<p><a href="#first-page">Back to First</a></p>
+			<p><a href="#third-page">Forward to Third</a></p>
+		</div>
+		<!-- /content -->
 
 		<div data-role="footer">
 			<h4>Page Footer</h4>
-		</div><!-- /footer -->
-	</div><!-- /page -->
+		</div>
+		<!-- /footer -->
+	</div>
+	<!-- /page -->
+
+
+	<!-- Start of third page -->
+	<div data-role="page" id="third-page">
+		<div data-role="header">
+			<h1>Third page header</h1>
+		</div>
+		<!-- /header -->
+
+		<div role="main" class="ui-content">
+			<p>I'm the third in the source order so I'm hidden when the page loads. I'm just shown if a link that references my
+				id is beeing clicked.</p>
+			<p><a href="#first-page">Back to First</a></p>
+			<p><a href="#second-page">Back to Second</a></p>
+		</div>
+		<!-- /content -->
+
+		<div data-role="footer">
+			<h4>Page Footer</h4>
+		</div>
+		<!-- /footer -->
+	</div>
+	<!-- /page -->
 </body>
 
 </html>
