--- a/index.html
+++ b/index.html
@@ -5,20 +5,26 @@
 	<meta charset="utf-8" />
 	<meta name="format-detection" content="telephone=no" />
 	<meta name="msapplication-tap-highlight" content="no" />
-	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
 	<link rel="stylesheet" href="css/jquery.mobile.min.css" />
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
-	 crossorigin="anonymous">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/all.min.css" />
+	<link rel="stylesheet" href="css/style.css" />
 	<script src="js/jquery.min.js"></script>
 	<script src="js/jquery.mobile.min.js"></script>
+
+	<style>
+		.fas,
+		.far {
+			color: black;
+		}
+	</style>
 </head>
 
 <body>
 	<div data-role="page" id="login">
 		<div data-role="main">
 			<ul id="list">
-				<li>
+				<li class="d-none">
 					<img src="http://hdphonewallpapers.com/content/ncpI4YzlBSsjPbXyNfMlKeAnPNZ1FJrVWtVbfG6Gdwh5Nja14haPmf4IcC2p99g1.png"
 					 style="width:100%;">
 				</li>
@@ -36,7 +42,7 @@
 		</div>
 		<div class="slide-indicator">
 			<span><i class="fas fa-circle"></i></span>
-			<span><i class="far fa-circle"></i></span>
+			<span><i class="fas fa-circle"></i></span>
 			<span><i class="far fa-circle"></i></span>
 			<span><i class="far fa-circle"></i></span>
 			<span><i class="far fa-circle"></i></span>
