--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 		.far {
 			color: black;
 		}
+
+		ul {
+			padding: 0;
+			list-style-type: none;
+		}
 	</style>
 </head>
 
@@ -24,7 +29,7 @@
 	<div data-role="page" id="login">
 		<div data-role="main">
 			<ul id="list">
-				<li class="d-none">
+				<li class="">
 					<img src="http://hdphonewallpapers.com/content/ncpI4YzlBSsjPbXyNfMlKeAnPNZ1FJrVWtVbfG6Gdwh5Nja14haPmf4IcC2p99g1.png"
 					 style="width:100%;">
 				</li>
