--- a/index.html
+++ b/index.html
@@ -8,56 +8,72 @@
 	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
 	<link rel="stylesheet" href="css/jquery.mobile.min.css" />
 	<link rel="stylesheet" href="css/all.min.css" />
-	<link rel="stylesheet" href="css/style.css" />
-	<!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" /> -->
+	<!-- <link rel="stylesheet" href="css/style.css" /> -->
 	<script src="js/jquery.min.js"></script>
 	<script src="js/jquery.mobile.min.js"></script>
 
 	<style>
 		.slide-indicator {
+			position: fixed;
+			bottom: 20px;
+			position: fixed;
+			width: 100%;
+			text-align: center;
 			color: #2ad;
 			font-size: 10px;
+			z-index: 5;
+		}
+
+		.fa-circle {
+			text-shadow: none;
+			color: white;
+			margin: 3px;
 		}
 
 		body {
-			overflow: hidden;
+			overflow: hidden !important;
 		}
 
 		img {
+			position: absolute;
 			width: 100%;
 		}
 
+		.current {
+			z-index: 4;
+		}
+
+		.queue {
+			z-index: 1;
+		}
+
 		.slide-left {
-			position: relative;
-			animation: animateleft 1s
+			position: absolute;
+			animation: animateleft 0.5s
 		}
 
 		@keyframes animateleft {
 			from {
 				right: 80%;
-				opacity: 0.3;
 			}
 
 			to {
 				right: 0;
-				opacity: 1;
 			}
 		}
 
 		.slide-right {
-			position: relative;
-			animation: animateright 1s
+			position: absolute;
+			animation: animateright 0.5s
 		}
 
 		@keyframes animateright {
 			from {
 				left: 80%;
-				opacity: 0.3;
 			}
 
 			to {
 				left: 0;
-				opacity: 1;
 			}
 		}
 	</style>
@@ -67,10 +83,10 @@
 	<div data-role="page" id="login">
 		<div data-role="main">
 			<div id="slides">
-				<img class="d-block" src="res/images/img_1.jpg" />
-				<img class="d-none" src="res/images/img_2.png" />
-				<img class="d-none" src="res/images/img_3.jpg" />
-				<img class="d-none" src="res/images/img_4.jpg" />
+				<img class="current" src="res/images/img_1.jpg" />
+				<img class="queue" src="res/images/img_2.png" />
+				<img class="queue" src="res/images/img_3.jpg" />
+				<img class="queue" src="res/images/img_4.jpg" />
 			</div>
 			<div class="slide-indicator">
 				<i class="fas fa-circle"></i>
@@ -85,63 +101,91 @@
 <script>
 	$(function ()
 	{
-		$(document).on("swipeleft swiperight", "#slides", function (event)
+		var current = $('.current');
+		var indicator = $('.slide-indicator .fas');
+
+		$(document).on("swipeleft", "#slides", function (event)
 		{
-			var current = $('img.d-block');
-			var indicator = $('.slide-indicator .fas');
-			event.stopPropagation();
-			switch (event.type)
+			if ($(current).next().length > 0)
 			{
-				case "swipeleft":
-					if ($(current).next().length > 0)
-					{
-						$(current).next().addClass('d-block');
-						$(current).next().addClass('slide-right');
-						$(current).next().removeClass('d-none');
-						$(indicator).next().addClass('fas');
-						$(indicator).next().removeClass('far');
-
-						$(current).addClass('d-none');
-						$(current).removeClass('d-block');
-						$(current).removeClass('slide-right');
-						$(indicator).addClass('far');
-						$(indicator).removeClass('fas');
-					}
-					// else
-					// {
-					// 	$('#slides img').first().addClass('d-block');
-					// 	$('#slides img').first().removeClass('d-none');
-					// 	$('.slide-indicator i').first().addClass('fas');
-					// 	$('.slide-indicator i').first().removeClass('far');
-					// }
-					break;
-				case "swiperight":
-					if ($(current).prev().length > 0)
-					{
-						$(current).prev().addClass('d-block');
-						$(current).prev().addClass('slide-left');
-						$(current).prev().removeClass('d-none');
-						$(indicator).prev().addClass('fas');
-						$(indicator).prev().removeClass('far');
-
-						$(current).addClass('d-none');
-						$(current).removeClass('d-block');
-						$(current).removeClass('slide-left');
-						$(indicator).addClass('far');
-						$(indicator).removeClass('fas');
-					}
-					// else
-					// {
-					// 	$('#slides img').last().addClass('d-block');
-					// 	$('#slides img').last().removeClass('d-none');
-					// 	$('.slide-indicator i').last().addClass('fas');
-					// 	$('.slide-indicator i').last().removeClass('far');
-					// }
-					break;
-				default:
-					break;
+				$(current).next().removeClass('queue');
+				$(current).next().addClass('current');
+				$(current).removeClass('current');
+				$(current).addClass('queue');
+				$(indicator).next().addClass('fas');
+				$(indicator).next().removeClass('far');
+				$(indicator).addClass('far');
+				$(indicator).removeClass('fas');
 			}
 		});
+
+		$(document).on("swiperight", "#slides", function (event)
+		{
+			if ($(current).prev().length > 0)
+			{
+				$(current).prev().removeClass('queue');
+				$(current).prev().addClass('current');
+				$(current).removeClass('current');
+				$(current).addClass('queue');
+				$(indicator).prev().addClass('fas');
+				$(indicator).prev().removeClass('far');
+				$(indicator).addClass('far');
+				$(indicator).removeClass('fas');
+			}
+		});
+
+
+		// switch (event.type)
+		// {
+		// 	case "swipeleft":
+		// 		if ($(current).next().length > 0)
+		// 		{
+		// 			$(current).next().addClass('d-block');
+		// 			$(current).next().addClass('slide-right');
+		// 			$(current).next().removeClass('d-none');
+		// 			$(indicator).next().addClass('fas');
+		// 			$(indicator).next().removeClass('far');
+
+		// 			$(current).addClass('d-none');
+		// 			$(current).removeClass('d-block');
+		// 			$(current).removeClass('slide-right');
+		// 			$(indicator).addClass('far');
+		// 			$(indicator).removeClass('fas');
+		// 		}
+		// 		// else
+		// 		// {
+		// 		// 	$('#slides img').first().addClass('d-block');
+		// 		// 	$('#slides img').first().removeClass('d-none');
+		// 		// 	$('.slide-indicator i').first().addClass('fas');
+		// 		// 	$('.slide-indicator i').first().removeClass('far');
+		// 		// }
+		// 		break;
+		// 	case "swiperight":
+		// 		if ($(current).prev().length > 0)
+		// 		{
+		// 			$(current).prev().addClass('d-block');
+		// 			$(current).prev().addClass('slide-left');
+		// 			$(current).prev().removeClass('d-none');
+		// 			$(indicator).prev().addClass('fas');
+		// 			$(indicator).prev().removeClass('far');
+
+		// 			$(current).addClass('d-none');
+		// 			$(current).removeClass('d-block');
+		// 			$(current).removeClass('slide-left');
+		// 			$(indicator).addClass('far');
+		// 			$(indicator).removeClass('fas');
+		// 		}
+		// 		// else
+		// 		// {
+		// 		// 	$('#slides img').last().addClass('d-block');
+		// 		// 	$('#slides img').last().removeClass('d-none');
+		// 		// 	$('.slide-indicator i').last().addClass('fas');
+		// 		// 	$('.slide-indicator i').last().removeClass('far');
+		// 		// }
+		// 		break;
+		// 	default:
+		// 		break;
+		// }
 	});
 </script>
 
