--- a/index.html
+++ b/index.html
@@ -8,75 +8,9 @@
 	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
 	<link rel="stylesheet" href="css/jquery.mobile.min.css" />
 	<link rel="stylesheet" href="css/all.min.css" />
-	<!-- <link rel="stylesheet" href="css/style.css" /> -->
+	<link rel="stylesheet" href="css/style.css" />
 	<script src="js/jquery.min.js"></script>
 	<script src="js/jquery.mobile.min.js"></script>
-
-	<style>
-		.slide-indicator {
-			position: fixed;
-			bottom: 20px;
-			position: fixed;
-			width: 100%;
-			text-align: center;
-			color: #2ad;
-			font-size: 10px;
-			z-index: 5;
-		}
-
-		.fa-circle {
-			text-shadow: none;
-			color: white;
-			margin: 3px;
-		}
-
-		body {
-			overflow: hidden !important;
-		}
-
-		#slides img {
-			position: absolute;
-			width: 100%;
-		}
-
-		.current {
-			z-index: 4;
-		}
-
-		.queue {
-			z-index: 1;
-		}
-
-		.slide-left {
-			position: absolute;
-			animation: animateleft 0.5s
-		}
-
-		@keyframes animateleft {
-			from {
-				right: 80%;
-			}
-
-			to {
-				right: 0;
-			}
-		}
-
-		.slide-right {
-			position: absolute;
-			animation: animateright 0.5s
-		}
-
-		@keyframes animateright {
-			from {
-				left: 80%;
-			}
-
-			to {
-				left: 0;
-			}
-		}
-	</style>
 </head>
 
 <body>
@@ -110,6 +44,8 @@
 			{
 				$(current).prev().removeClass('slide-left');
 				$(current).prev().removeClass('slide-right');
+				$(current).removeClass('slide-left');
+				$(current).removeClass('slide-right');
 				$(current).next().removeClass('slide-left');
 				$(current).next().removeClass('slide-right');
 
@@ -136,6 +72,8 @@
 			{
 				$(current).prev().removeClass('slide-left');
 				$(current).prev().removeClass('slide-right');
+				$(current).removeClass('slide-left');
+				$(current).removeClass('slide-right');
 				$(current).next().removeClass('slide-left');
 				$(current).next().removeClass('slide-right');
 
