--- a/index.html
+++ b/index.html
@@ -51,29 +51,7 @@
 
 	<div id="dashboard" class="d-">
 		<div class="dbResponse">
-			<p>In mathematics, parity is the property of an integer's inclusion in one of two categories: even or odd. An
-				integer is even if it is divisible by two and odd if it is not even.[1] For example, 6 is even because there is no
-				remainder when dividing it by 2. By contrast, 3, 5, 7, 21 leave a remainder of 1 when divided by 2. Examples of
-				even numbers include −4, 0, 82 and 178. In particular, zero is an even number.[2] Some examples of odd numbers are
-				−5, 3, 29, and 73.</p>
-			<p>
-				A formal definition of an even number is that it is an integer of the form n = 2k, where k is an integer;[3] it can
-				then be shown that an odd number is an integer of the form n = 2k + 1. It is important to realize that the above
-				definition of parity applies only to integer numbers, hence it cannot be applied to numbers like 1/2, 4.201. See
-				the section "Higher mathematics" below for some extensions of the notion of parity to a larger class of "numbers"
-				or in other more general settings.
-			</p>
-			<p>The following laws can be verified using the properties of divisibility. They are a special case of rules in
-				modular arithmetic, and are commonly used to check if an equality is likely to be correct by testing the parity of
-				each side. As with ordinary arithmetic, multiplication and addition are commutative and associative in modulo 2
-				arithmetic, and multiplication is distributive over addition. However, subtraction in modulo 2 is identical to
-				addition, so subtraction also possesses these properties, which is not true for normal integer arithmetic.</p>
-			<p>It is well to direct the pupil's attention here at once to a great far-reaching law of nature and of thought. It
-				is this, that between two relatively different things or ideas there stands always a third, in a sort of balance,
-				seeming to unite the two. Thus, there is here between odd and even numbers one number (one) which is neither of the
-				two. Similarly, in form, the right angle stands between the acute and obtuse angles; and in language, the
-				semi-vowels or aspirants between the mutes and vowels. A thoughtful teacher and a pupil taught to think for himself
-				can scarcely help noticing this and other important laws</p>
+			<p>Requesting status, Please wait...</p>
 		</div>
 		<div class="dbControls">
 			<div onclick="activate()" class="card1">Activate</div>
@@ -84,7 +62,7 @@
 		<div class="dbHeader">Ecop Security<span onclick="settings()"><i class="fas fa-ellipsis-v"></i></span></div>
 	</div>
 
-	<div id="settings" class="d-none" onclick="closeSettings()">
+	<div id="settings" class="d-" onclick="closeSettings()">
 		<ul>
 			<li onclick="loadOption(1)">Accounts</li>
 			<li onclick="loadOption(2)">Guide</li>
