--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-	<div id="tour" class="d-">
+	<div id="tour" class="d-none">
 		<div id="slides">
 			<img src="res/images/img_1.jpg" style="z-index: 4;" />
 			<img src="res/images/img_2.png" style="z-index: 3;" />
